<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView android:id="@+id/ScrollViewID"
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button1"
                android:text="@string/option_1"
                style="@style/AppTheme.Button"
                android:onClick="buttonClicked"/>
            <Button
                android:id="@+id/button2"
                style="@style/AppTheme.Button"
                android:text="@string/option_2"
                android:onClick="buttonClicked"/>

            <Button
                android:id="@+id/button3"
                style="@style/AppTheme.Button"
                android:onClick="buttonClicked"
                android:text="@string/option_3" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>